[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/world/doors/SlidingDoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/doors/DoubleSlidingDoor.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.5, 0.5 )

[node name="DoubleSlidingDoor" type="Spatial"]
script = ExtResource( 2 )

[node name="SlidingDoor" parent="." instance=ExtResource( 1 )]

[node name="SlidingDoor2" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="DoorDetection" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="DoorDetection"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="SlidingDoor/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="SlidingDoor"]
